# Cellular-automata

./: README.md  app_ui.py  cell_engine.py  game_widget.py  main.py  pyproject.toml
Ui/: GOL.ui
